# 6502-emulator

./: CMakeLists.txt
src/: CPU.h  Instructionset.h  main.cpp  memory.cpp  memory.h  processor.cpp  processor.h
